<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.ui.MembershipFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/membershipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/startupplan" />

    <RelativeLayout
        android:id="@+id/pricecontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/membershipTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:text="$" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/dollar"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:text="5"
            android:textSize="40sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pricecontainer"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:text="per month" />

    <LinearLayout
        android:id="@+id/featurescontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/month"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature1image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:text="@string/fa_check_circle_o"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/feature1"></androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature2image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:text="@string/fa_check_circle_o"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/feature2"></androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature3image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:text="@string/fa_check_circle_o"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/feature3"></androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature4image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:text="@string/fa_check_circle_o"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feature4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/feature4"></androidx.appcompat.widget.AppCompatTextView>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_below="@+id/featurescontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="Sign Up"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:textAlignment="center"></androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>